--- a/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12113" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad12_9" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12078"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Minecrafter.Reg.ttf">
+            <string>Minecrafter</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -18,34 +23,34 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-bg" translatesAutoresizingMaskIntoConstraints="NO" id="Muc-2h-LJr">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="hiR-xq-ppx">
-                                <rect key="frame" x="0.0" y="1314" width="1024" height="52"/>
+                                <rect key="frame" x="0.0" y="428" width="320" height="52"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="52" id="fyn-iT-1x7"/>
                                     <constraint firstAttribute="height" constant="52" id="qBJ-t3-PF6"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="counter" translatesAutoresizingMaskIntoConstraints="NO" id="uqz-fl-xCZ">
-                                <rect key="frame" x="366.5" y="458.5" width="291" height="65"/>
+                                <rect key="frame" x="14.5" y="15.5" width="291" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="291" id="B5I-dS-ibD"/>
                                     <constraint firstAttribute="height" constant="65" id="mnn-KS-pwk"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backpanel" translatesAutoresizingMaskIntoConstraints="NO" id="NBG-wN-zWO">
-                                <rect key="frame" x="202" y="543.5" width="620" height="349"/>
+                                <rect key="frame" x="-150" y="100.5" width="620" height="349"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="349" id="QNF-E7-SI8"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0uU-ZH-aQC">
-                                <rect key="frame" x="417" y="560.5" width="189" height="315"/>
+                                <rect key="frame" x="65" y="117.5" width="189" height="315"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="L53-FR-zVz">
                                         <rect key="frame" x="0.0" y="0.0" width="189" height="55"/>
@@ -195,14 +200,14 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2m-4L-0Jc">
-                                <rect key="frame" x="398.5" y="470.5" width="227" height="41"/>
+                                <rect key="frame" x="46.5" y="27.5" width="227" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="227" id="4Le-bp-0ic"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="227" id="PAJ-KJ-Aue"/>
                                     <constraint firstAttribute="height" constant="41" id="aEV-XX-yRq"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="41" id="gq8-sm-ltl"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="Minecrafter" family="Minecrafter" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
